--- a/common.blocks/assortment.css
+++ b/common.blocks/assortment.css
@@ -122,24 +122,36 @@
     padding: 0 20px;
   }
 
+  .assortment__title {
+    margin-bottom: 40px;
+  }
+
+  .assortment__grid {
+    margin-bottom: 25px;
+
+    grid-gap: 25px;
+  }
+
+
   .assortment__grid-item {
     min-height: 180px;
   }
 
   .assortment__type {
-    top: 25px;
+    top: 20px;
     left: 25px;
 
     font-size: 14px;
   }
 
   .assortment__count-of-type {
-    top: 40px;
+    top: 38px;
     left: 25px;
 
     font-size: 12px;
   }
 
+  
   .assortment__more-button {
     bottom: 20px;
 
