--- a/common.blocks/footer.css
+++ b/common.blocks/footer.css
@@ -1,5 +1,5 @@
 .footer {
-  padding: 30px 75px 10px;
+  padding: 30px 75px 15px;
 
   text-align: center;
 
@@ -100,7 +100,7 @@
 
 @media only screen and (min-width: 768px) and (max-width: 1365px) {
   .footer {
-    padding: 20px;
+    padding: 34px 20px 10px 20px;
 
     color: white;
   }
@@ -116,16 +116,22 @@
   .footer__copyright {
     flex-basis: auto;
     flex-grow: 1;
-    order: 3;
 
-    margin: 0;
+    width: 14%;
+    margin-right: 33px;
     padding: 0;
+
+    text-align: end;
+
+    color: #b6b6b6;
+
+    font-size: 13px;
   }
 
   .footer__link {
     color: white;
 
-    font-size: 12px;
+    font-size: 14px;
   }
 
   .footer__logo {
@@ -136,29 +142,24 @@
     color: whitesmoke;
   }
 
+  .footer__social-network {
+    margin-top: 0;
+  }
+
   .footer__social-network-button {
     margin-right: 20px;
 
     color: #b6b6b6;
+
+    font-size: 23px;
   }
 
   .footer__social-network-button:hover {
     color: white;
   }
 
-  .footer__copyright {
-    margin-right: 20px;
-
-    text-align: end;
-
-    color: #b6b6b6;
-
-    font-size: 12px;
-  }
-
   .footer__divider {
-    margin-top: 40px;
-    margin-bottom: 15px;
+    margin: 37px 50px 13px 50px;
   }
 
   .footer__social-network {
