--- a/common.blocks/assortment.css
+++ b/common.blocks/assortment.css
@@ -25,6 +25,12 @@
   position: relative;
 
   display: flex;
+
+  transition: filter 200ms;
+}
+
+.assortment__grid-item:hover {
+  filter: brightness(96%);
 }
 
 .assortment__grid-item {
@@ -45,12 +51,16 @@
   align-content: center;
   justify-content: center;
 
+  width: 100%;
+
   background-color: #aaa;
 }
 
 .assortment__image {
   width: 100%;
-  height: auto;
+  height: 100%;
+
+  background-color: white;
 
   object-fit: cover;
   object-position: center;
@@ -132,7 +142,6 @@
     grid-gap: 25px;
   }
 
-
   .assortment__grid-item {
     min-height: 180px;
   }
@@ -151,7 +160,6 @@
     font-size: 12px;
   }
 
-  
   .assortment__more-button {
     bottom: 20px;
 
@@ -165,9 +173,9 @@
   }
 }
 
-@media only screen and (min-width: 320px) and (max-width: 767px) {
+@media only screen and (max-width: 767px) {
   .assortment {
-    padding: 30px 20px;
+    padding: 30px 20px 20px;
   }
 
   .assortment__title {
@@ -177,15 +185,15 @@
   }
 
   .assortment__type {
-    top: 15px;
-    left: 15px;
+    top: 10px;
+    left: 12px;
 
     font-size: 14px;
   }
 
   .assortment__count-of-type {
-    top: 30px;
-    left: 15px;
+    top: 29px;
+    left: 12px;
 
     font-size: 12px;
   }
@@ -215,7 +223,16 @@
     grid-row: span 1;
   }
 
+  .assortment__image-wrapper {
+    overflow: hidden;
+
+    width: 100%;
+  }
+
   .assortment__image {
-    object-position: center 17%;
+    transform: scale(1.8);
+
+    object-position: center 15px;
+    object-fit: contain;
   }
 }
