--- a/common.blocks/benefit.css
+++ b/common.blocks/benefit.css
@@ -18,3 +18,17 @@
   font-size: 14px;
   line-height: 20px;
 }
+
+@media only screen and (max-width: 767px) {
+  .benefit {
+    align-items: unset;
+  }
+
+  .benefit__icon {
+    font-size: 33px;
+  }
+
+  .benefit__text {
+    max-width: 100%;
+  }
+}
