--- a/common.blocks/choose-cake.css
+++ b/common.blocks/choose-cake.css
@@ -16,7 +16,8 @@
 }
 
 .choose-cake__header {
-  width: 377px;
+  width: 100%;
+  max-width: 377px;
   margin-bottom: 20px;
 
   letter-spacing: 6px;
@@ -83,27 +84,32 @@
   }
 }
 
-@media only screen and (min-width: 320px) and (max-width: 767px) {
+@media only screen and (max-width: 767px) {
   .choose-cake {
-    margin-bottom: 30px;
+    margin-bottom: 17px;
+    padding-bottom: 0;
   }
 
   .choose-cake__wrapper {
     align-items: center;
 
-    padding-top: 40px;
+    padding-top: 125px;
   }
 
   .choose-cake__header {
-    margin-bottom: 20px;
+    max-width: 185px;
+    margin-bottom: 17px;
 
     text-align: center;
+    letter-spacing: 2px;
 
-    font-size: 60px;
+    font-size: 41px;
   }
 
   .choose-cake__subheader {
     margin-bottom: 20px;
+
+    font-size: 26px;
   }
 
   .choose-cake__button {
@@ -115,7 +121,8 @@
   .choose-cake__benefits {
     flex-direction: column;
 
-    margin-bottom: 40px;
+    width: 100%;
+    margin-bottom: 35px;
   }
 
   .choose-cake__benefits-item {
@@ -123,6 +130,6 @@
   }
 
   .choose-cake__benefits-item:not(:last-child) {
-    margin-bottom: 10px;
+    margin-bottom: 0px;
   }
 }
