--- a/common.blocks/common.css
+++ b/common.blocks/common.css
@@ -84,7 +84,7 @@
   }
 }
 
-@media only screen and (min-width: 320px) and (max-width: 767px) {
+@media only screen and (max-width: 767px) {
   .section {
     padding-right: 20px;
     padding-left: 20px;
