--- a/common.blocks/contacts.css
+++ b/common.blocks/contacts.css
@@ -124,7 +124,7 @@
   color: var(--primary-color);
 }
 
-@media only screen and (min-width: 768px) and (max-width: 1365px) {
+@media only screen and (max-width: 1365px) {
   .contacts {
     min-height: auto;
     padding-top: 45px;
@@ -217,9 +217,10 @@
   }
 }
 
-@media only screen and (min-width: 320px) and (max-width: 767px) {
+@media only screen and (max-width: 767px) {
   .contacts {
-    padding: 40px 20px;
+    min-height: auto;
+    padding: 37px 20px 48px;
 
     background-image: none;
   }
@@ -233,19 +234,39 @@
   }
 
   .contacts__header {
-    margin-bottom: 15px;
+    margin-bottom: 10px;
 
     text-align: center;
   }
 
   .contacts__subheader {
-    margin-bottom: 10px;
+    margin-bottom: 7px;
 
-    font-size: 22px;
+    font-size: 25px;
+  }
+
+  .contacts__form {
+    min-width: auto;
+  }
+
+  .contacts__form-submit {
+    padding: 13px 44px;
+
+    font-size: 20px;
   }
 
   .contacts__text {
     margin-bottom: 10px;
+
+    font-size: 15px;
+  }
+
+  .contacts__network-text {
+    margin-bottom: 18px;
+  }
+
+  .contacts__social-network-text {
+    margin-bottom: 14px;
   }
 
   .contacts__feedback {
@@ -256,7 +277,7 @@
     margin-bottom: 20px;
   }
 
-  .contacts__network > .contacts__text {
+  /* .contacts__network > .contacts__text {
     margin-bottom: 25px;
-  }
+  } */
 }
