--- a/common.blocks/header.css
+++ b/common.blocks/header.css
@@ -75,7 +75,7 @@
   display: none;
 }
 
-@media only screen and (min-width: 768px) and (max-width: 1365px) {
+@media only screen and (max-width: 1365px) {
   .header {
     margin: 0;
     padding: 17px 50px;
@@ -128,8 +128,6 @@
   .header__navigation-toggle:checked ~ .header__navigation {
     transition: transform 350ms ease-in-out;
     transform: scale(1, 1);
-
-    /* opacity: 1; */
   }
 
   .header__navigation-toggle:checked ~ .header__navigation .header__link {
@@ -139,9 +137,13 @@
   }
 }
 
-@media only screen and (min-width: 320px) and (max-width: 767px) {
+@media only screen and (max-width: 767px) {
   .header {
-    padding: 20px;
+    padding: 10px 20px 10px 20px;
+  }
+
+  .header__logo {
+    font-size: 15px;
   }
 
   .header__phone-number {
