--- a/common.blocks/main.css
+++ b/common.blocks/main.css
@@ -8,7 +8,7 @@
   background-size: contain;
 }
 
-@media only screen and (min-width: 320px) and (max-width: 767px) {
+@media only screen and (max-width: 767px) {
   .main {
     background-image: url('../../images/mobile/img2.png');
   }
