--- a/common.blocks/order.css
+++ b/common.blocks/order.css
@@ -31,6 +31,8 @@
 
 .order__instruction {
   display: flex;
+
+  margin-bottom: 20px;
 }
 
 .order__instruction-step {
@@ -57,8 +59,6 @@
 
 .order__instruction-info {
   display: inline-block;
-
-  margin-bottom: 20px;
 
   font-size: 20px;
 }
@@ -103,9 +103,12 @@
   }
 }
 
-@media only screen and (min-width: 320px) and (max-width: 767px) {
+@media only screen and (max-width: 767px) {
   .order {
-    display: flex;
+    display: block;
+
+    min-height: auto;
+    padding: 30px 40px 92px 40px;
 
     background-color: #e5363c;
     background-image: url('../images/mobile/present.png');
@@ -115,18 +118,35 @@
 
   .order__content-wrapper {
     max-width: none;
-    margin-bottom: 115px;
+    margin-bottom: 0;
   }
 
   .order__header {
-    margin-bottom: 40px;
+    margin-bottom: 30px;
 
     text-align: center;
   }
 
+  .order__instruction {
+    margin-bottom: 15px;
+  }
+
   .order__instruction-step {
+    min-width: 28px;
     margin-right: 0;
 
-    font-size: 35px;
+    font-size: 30px;
+  }
+
+  .order__instruction-header {
+    margin-top: 8px;
+    margin-bottom: 9px;
+
+    font-size: 15px;
+  }
+
+  .order__instruction-info {
+    font-size: 14px;
+    line-height: 15px;
   }
 }
