--- a/common.blocks/common.css
+++ b/common.blocks/common.css
@@ -75,6 +75,7 @@
 
 .section-title {
   font-size: 40px;
+  font-weight: bold;
 }
 
 @media only screen and (min-width: 768px) and (max-width: 1365px) {
